2016-02-22  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.1-0

	* man/btable.Rd, latexrule.Rd: added files

2015-11-17  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-6

	* vignettes/tex_helpers.Rnw: added file

	* R/functions.R (btable): new function
	(latexrule): new function

2015-10-20  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (toHTML.text): new method

2015-10-15  Enrico Schumann  <es@enricoschumann.net>

	* NEWS: added file (empty; it only points to the ChangeLog)

2015-10-15  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.0-5

	* R/functions.R (char2num): the function now uses
	'Sys.localeconv()[["decimal_point"]]' as the decimal separator;
	but see the caveats at ?Sys.localeconv

	* NAMESPACE: 'expstr' is no longer exported (use 'strexp' instead)

	* man/rmrp.Rd: added man page

	* man/strexp.Rd: added man page

	* man/char2num.Rd: added man page

2015-09-29  Enrico Schumann  <es@enricoschumann.net>

	* man/valign.Rd: added man page

2015-09-29  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.0-4

	* man/trim.Rd: new help page for 'trim'

	* R/functions.R (rmspace): added call to '.Deprecated'.

2015-08-18  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-3

	* R/functions.R (toText.default): 'toText.default' now attaches
	'text' class

	* R/functions.R (print.text): new method

2015-07-01  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-2

	* R/functions.R (trim): removed/commented benchmark code

2015-05-08  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-1

	* R/functions.R: initial version
