@@ -1,3 +1,8 @@
+2016-03-31  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (rmspace): remove function -- use
+	trim instead
+
 2016-02-22  Enrico Schumann  <es@enricoschumann.net>
 
 	* DESCRIPTION (Version): Version: 0.1-0
